Utils/yaml/rabbitmq/dp-rabbitmq.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rabbitmq
  namespace: microservices
  labels:
    app: rabbitmq
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: microservices
    app.openshift.io/runtime: rabbitmq
    app.openshift.io/runtime-namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        deployment: rabbitmq
    spec:
      volumes:
        - name: rabbitmq-1
          emptyDir: {}
      containers:
        - name: rabbitmq
          image: image-registry.openshift-image-registry.svc:5000/microservices/is-rabbitmq:latest
          ports:
            - containerPort: 15671
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
            - containerPort: 15691
              protocol: TCP
            - containerPort: 15692
              protocol: TCP
            - containerPort: 25672
              protocol: TCP
            - containerPort: 4369
              protocol: TCP
            - containerPort: 5671
              protocol: TCP
            - containerPort: 5672
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: rabbitmq-1
              mountPath: /var/lib/rabbitmq
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
